# mlarray

./: 404.html  API.md  README.md  SCHEMA.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: workflow.yml
api/: index.html
bench/: README.md  bench_convert_nii_to_mla_random_read.py  bench_io_blosc2_layouts.py
bench/helper/: print_mla_layouts.py
cli/: index.html
docs/: api.md  cli.md  index.md  optimization.md  schema.md  usage.md  why.md
examples/: example.py  example_asarray.py  example_bboxes_only.py  example_channel.py  example_compress_decompress.py  example_compressed_vs_uncompressed.py  example_in_memory_constructors.py  example_metadata_only.py  example_non_spatial.py  example_open.py  example_save_load.py
med_blosc2/: __init__.py  cli.py  med_blosc2.py  meta.py
mlarray/: __init__.py  blosc2_layout_strategies.py  cli.py  meta.py  mlarray.py
optimization/: index.html
schema/: index.html
search/: search_index.json
tests/: test_asarray.py  test_cli.py  test_compress_decompress.py  test_constructors.py  test_create.py  test_meta_safety.py  test_metadata.py  test_open.py  test_optimization.py  test_usage.py
usage/: index.html
why/: index.html
